--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
-<html>
-<head></head>
+<html ng-app="angular">
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+    <script src="js/custom.js"></script>
+</head>
 <body>
+
+<div>
+    <label>Name:</label>
+    <input type="text" ng-model="yourName" placeholder="Enter a name here">
+    <hr>
+    <h1>Hello {{yourName}}!</h1>
+</div>
+
+<div ng-controller="CustomCtrl as todolist">
+<h1>Todo</h1>
+<p>1 of 2 remaining</p>
+<input type="checkbox" checked>
+<input type="checkbox">
+<input type="text" ng-model="todolist.todoname">
+<button id="todo">{{todolist.todoname}}</button>
+</div>
+
 </body>
 </html>
