--- a/index.html
+++ b/index.html
@@ -1,25 +1,38 @@
 <html ng-app="angular">
+
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     <script src="js/custom.js"></script>
 </head>
+
 <body>
 
-<div>
-    <label>Name:</label>
-    <input type="text" ng-model="yourName" placeholder="Enter a name here">
-    <hr>
-    <h1>Hello {{yourName}}!</h1>
-</div>
+    <div>
+        <label>Name:</label>
+        <input type="text" ng-model="yourName" placeholder="Enter a name here">
+        <hr>
+        <h1>Hello {{yourName}}!</h1>
+    </div>
 
-<div ng-controller="CustomCtrl as todolist">
-<h1>Todo</h1>
-<p>1 of 2 remaining</p>
-<input type="checkbox" checked>
-<input type="checkbox">
-<input type="text" ng-model="todolist.todoname">
-<button id="todo">{{todolist.todoname}}</button>
-</div>
+    <div ng-controller="CustomCtrl as todolist">
+        <h1>Todo</h1>
+        <p>1 of 2 remaining</p>
+        <input type="checkbox" checked>
+        <input type="checkbox">
+
+        <!--'ng-repeat' = 'each' -->
+        <div ng-repeat="todo in todolist.todos">
+            {{todo}}
+        </div>
+        
+        <input type="text" 
+                ng-model="todolist.todoname" 
+                placeholder="{{todolist.todoPlaceholder}}">
+        
+        <!--'ng-clik' = 'onclick' -->
+        <button id="todo" ng-click="todolist.addTodo()">add</button>
+    </div>
 
 </body>
+
 </html>
