--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     <script src="js/custom.js"></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -17,12 +18,13 @@
     <div ng-controller="CustomCtrl as todolist">
         <h1>Todo</h1>
         <p>1 of 2 remaining</p>
-        <input type="checkbox" checked>
-        <input type="checkbox">
-
+        
         <!--'ng-repeat' = 'each' -->
         <div ng-repeat="todo in todolist.todos">
-            {{todo}}
+            <input type="checkbox" ng-model="todo.checked">
+            <label ng-class="{'checked': todo.checked}">
+                {{todo.name}}
+            </label>
         </div>
         
         <input type="text" 
